--- a/notebooks_aulas/aula2.ipynb
+++ b/notebooks_aulas/aula2.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,156 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Strings são tipos de dados de texto.\n",
+    "\n",
+    "Podemos criar variáveis de string da mesma forma que criamos as variáveis de números"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marquinhos Moura\n"
+     ]
+    }
+   ],
+   "source": [
+    "pseudonimo = \"Marquinhos Moura\"\n",
+    "print(pseudonimo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos alterar strings com várias funções diferentes de manipulação.\n",
+    "\n",
+    "A célula a seguir transforma todas as letras em maiúsculas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MARQUINHOS MOURA\n"
+     ]
+    }
+   ],
+   "source": [
+    "pseudonimo_maiusc = pseudonimo.upper()\n",
+    "print(pseudonimo_maiusc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos substituir partes da string:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marquinhos_Moura\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pseudonimo.replace(' ', '_'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com `split`, é possível dividir o texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Marquinhos', 'Moura']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pseudonimo.split(' '))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É possível *indexar* a string para recortar partes do texto:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "karl marx karl☭marx\n",
+      "karl☭marx\n",
+      "k\n",
+      "karl\n",
+      "karl\n",
+      "karl☭marx\n",
+      "karl☭marx\n",
+      "x\n",
+      "r\n",
+      "☭mar\n"
+     ]
+    }
+   ],
+   "source": [
+    "comunismo = ('karl marx')\n",
+    "comunismo_symbol = comunismo.replace(' ', '☭')\n",
+    "print(comunismo, comunismo_symbol)\n",
+    "\n",
+    "print(comunismo_symbol)\n",
+    "print(comunismo_symbol[0])\n",
+    "print(comunismo_symbol[0:4])\n",
+    "print(comunismo_symbol[:4])\n",
+    "print(comunismo_symbol[:])\n",
+    "print(comunismo_symbol[0:])\n",
+    "print(comunismo_symbol[-1])\n",
+    "print(comunismo_symbol[-2])\n",
+    "print(comunismo_symbol[4:-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Leia mais sobre outras funções de manipulação de string no link: https://www.w3schools.com/python/python_ref_string.asp"
+   ]
   }
  ],
  "metadata": {
